# opsi-lite

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
assets/: icon.rgba  make_icon.ps1
notes/: project-ideas.md  table-demo.md  welcome.md
notes/daily/: 2026-06-10.md
packaging/: README.md
packaging/scoop/: opsi-lite.json
packaging/winget/: YoshidaSoftware.OpsiLite.installer.yaml  YoshidaSoftware.OpsiLite.locale.en-US.yaml  YoshidaSoftware.OpsiLite.yaml
src/: app.rs  config.rs  highlight.rs  index.rs  main.rs  preview.rs  table.rs  tasks.rs  wikilink.rs
